--- a/main.css
+++ b/main.css
@@ -115,3 +115,15 @@ body {
 .finish .bad {
   color: red;
 }
+
+.reset {
+  max-width: 11rem;
+  font-weight: bold;
+  font-size: 1.6rem;
+  text-align: center;
+  padding: 0.4em;
+  color: #009688;
+  border: 2px solid #009688;
+  border-radius: 6px;
+  margin-inline: auto;
+}
